--- a/apps/evm/src/app/[lang]/index.css
+++ b/apps/evm/src/app/[lang]/index.css
@@ -9,7 +9,7 @@
   font-weight: 400;
   color: #ffffff;
 
-  color-scheme: light dark;
+  /* color-scheme: light dark; */
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
